# pediatric-handoff-phi-remover

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PROJECT_STATUS.md  README.md  TEST_PRESERVED_VS_REMOVED.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_presidio.py
.github/workflows/: docker.yml  test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  (+2 more)
app/: __init__.py  audit.py  config.py  deidentification.py  main.py  transcription.py
configs/: bert_entity_mapping.json  philter_patterns.json  philter_pediatric.json
docs/: DEPLOYMENT.md  ENGINE_BENCHMARK.md  HIPAA.md  SPOKEN_HANDOFF_ANALYSIS.md  project_summary.md  research_poster.html  research_poster.md
patterns/: guardian_patterns.txt  room_patterns.txt
results/: philter_adversarial.txt  philter_standard.txt  presidio_adversarial.txt  presidio_standard.txt
scripts/: benchmark_bert.py  benchmark_philter.py  preload_models.py
static/: app.js  index.html  styles.css
tests/: __init__.py  adversarial_handoffs.json  annotation_schema.py  calibrate_thresholds.py  check_thresholds.py  error_taxonomy.py  evaluate_presidio.py  generate_test_data.py  handoff_templates.py  medical_providers.py  run_validation.py  sample_transcripts.py  synthetic_handoffs.json  test_deidentification.py  test_transfer_facility_mode.py  test_weighted_metrics.py  validation_dataset.py
(+247 files in other folders)
